Align fix for the dropdown-toggle character

--- a/sass/navigation/_nav-mobile.scss
+++ b/sass/navigation/_nav-mobile.scss
@@ -127,6 +127,7 @@ $hamburger-hover-transition-timing-function: linear;
       content: '';
       height: 32px;
       width: 32px;
+      line-height: 1.8;
       padding: 0;
       position: absolute;
       margin: 0;
